# RDEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Libs/glad/: CMakeLists.txt
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
res/shaders/: fragment.txt  vertex.txt
src/: main.cpp
src/Math/Vectors/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/Render/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
